# take_home_task

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  noxfile.py  poetry.toml  pyproject.toml
docker/: Dockerfile.flink  Dockerfile.generator
flink-app/: requirements.txt
flink-app/src/: config.py  main.py
flink-app/src/sql/: __init__.py  inserts.py  tables.py  views.py
flink-app/tests/: test_sql_tables.py
infrastructure/: main.tf  outputs.tf  providers.tf  s3.tf  variables.tf
monitoring/grafana/dashboards/: dashboards.yml  flink_dashboard.json  generator_dashboard.json  kafka_dashboard.json
monitoring/prometheus/: prometheus.yml
src/: __init__.py
src/common/: __init__.py  config.py  logging.py  metrics.py  schemas.py
src/data_generator/: __init__.py  generator.py  producer.py
tests/: test_generator.py  test_schemas.py
tests/unit/: test_schemas.py
