[tool.poetry]
name = "pageview-pipeline"
version = "0.1.0"
description = "Real-time pageview data pipeline using AWS Kafka and Flink"
readme = "README.md"
authors = ["Satyasheel"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
# AWS SDK
boto3 = "^1.35.0"
# Kafka
kafka-python = "^2.0.2"
# Data validation
pydantic = "^2.12.5"
pydantic-settings = "^2.7.0"
# Logging
loguru = "^0.7.3"
# Metrics
prometheus-client = "^0.23.1"
# Data generation
faker = "^40.1.0"
# Data processing
pyarrow = "^22.0.0"
polars = "^1.36.1"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
nox = "^2025.11.12"
mock = "^5.2.0"
# Code quality
ruff = "^0.14.10"
ty = "^0.0.8"
# Type stubs
boto3-stubs = {extras = ["kafka", "s3", "iam", "cloudwatch", "kinesisanalyticsv2"], version = "^1.35.0"}
types-requests = "^2.32.0"
loguru-mypy = "^0.0.4"

[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
exclude = [
    '.svn', 'CVS', '.bzr', '.hg', '.git', '__pycache__',
    '.eggs', '*.egg', 'node_modules', '.vscode/',
    '.mypy_cache', '.pytest_cache/', '.venv'
]
select = [
    'B',    # flake8-bugbear
    'C',    # mccabe complexity
    'D',    # pydocstyle
    'E',    # pycodestyle errors
    'F',    # pyflakes
    'W',    # pycodestyle warnings
    'I',    # isort
    'C4',   # flake8-comprehensions
    'SIM',  # flake8-simplify
    'UP',   # pyupgrade
]
ignore = [
    'E203',   # Whitespace before ':'
    'E501',   # line too long (handled by formatter)
    'D104',   # missing docstring in public package
    'D100',   # missing docstring in public module
]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs}/*" = ["S101", "D"]
"noxfile.py" = ["D"]

[tool.ty.environment]
python-version = "3.12"
root = ["."]

[tool.ty.src]
exclude = [
    "tests/**",
    "flink-app/**"
]

[tool.pytest.ini_options]
log_cli = true
log_cli_format = '%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)'
log_cli_date_format = '%Y-%m-%d %H:%M:%S'
addopts = '--verbose --cov=src --cov-report=term-missing --cov-report=html'
testpaths = ['tests']
norecursedirs = ['docs', '*.egg-info', '.git', '__pycache__', '.tox', 'flink-app']

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

