[project]
name = "pageview-pipeline"
version = "0.1.0"
description = "Real-time pageview data pipeline using AWS Kafka and Flink"
readme = "README.md"
authors = [{name = "Satyasheel"}]
requires-python = "==3.10.*"
dependencies = [
    "boto3>=1.35.0",
    "kafka-python>=2.0.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",
    "loguru>=0.7.3",
    "prometheus-client>=0.23.1",
    "faker>=40.1.0",
    "pyarrow>=18.0.0",
    "polars>=1.36.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.23.0",
    "nox>=2024.10.9",
    "mock>=5.1.0",
    "ruff>=0.8.0",
    "ty>=0.0.8",
    "boto3-stubs[cloudwatch,iam,kafka,kinesisanalyticsv2,s3]>=1.35.0",
    "types-requests>=2.32.0",
    "loguru-mypy>=0.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common", "src/data_generator"]

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
exclude = [
    '.svn', 'CVS', '.bzr', '.hg', '.git', '__pycache__',
    '.eggs', '*.egg', 'node_modules', '.vscode/',
    '.mypy_cache', '.pytest_cache/', '.venv'
]
select = [
    'B',    # flake8-bugbear
    'C',    # mccabe complexity
    'D',    # pydocstyle
    'E',    # pycodestyle errors
    'F',    # pyflakes
    'W',    # pycodestyle warnings
    'I',    # isort
    'C4',   # flake8-comprehensions
    'SIM',  # flake8-simplify
    'UP',   # pyupgrade
]
ignore = [
    'E203',   # Whitespace before ':'
    'E501',   # line too long (handled by formatter)
    'D104',   # missing docstring in public package
    'D100',   # missing docstring in public module
]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs}/*" = ["S101", "D"]
"noxfile.py" = ["D"]

[tool.ty.environment]
python-version = "3.10"
root = ["."]

[tool.ty.src]
exclude = [
    "tests/**",
    "flink-app/**",
    "noxfile.py"
]

[tool.pytest.ini_options]
log_cli = true
log_cli_format = '%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)'
log_cli_date_format = '%Y-%m-%d %H:%M:%S'
addopts = '--verbose'
testpaths = ['tests']
norecursedirs = ['docs', '*.egg-info', '.git', '__pycache__', '.tox', 'flink-app']
